--- a/style/style.css
+++ b/style/style.css
@@ -395,15 +395,332 @@ body header .sliderNav__works .worksInfos {
   gap: 35px;
   justify-content: space-between;
 }
+@media screen and (max-width: 576px) {
+  body header .sliderNav__works .worksInfos {
+    gap: 10px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-top: 15px;
+  }
+}
 body header .sliderNav__works .sliderAdress {
   color: #FFFFFF;
   font-size: 1em;
   font-weight: 800;
   display: none;
 }
+@media screen and (max-width: 576px) {
+  body header .sliderNav__works .sliderAdress {
+    font-size: 0.9em;
+    margin-top: 0;
+    margin-bottom: 8px;
+  }
+}
 body header .sliderNav__works .sliderPrice, body header .sliderNav__works .sliderStreet {
   color: #C39469;
   font-size: 1em;
   font-weight: 800;
   display: none;
+}
+@media screen and (max-width: 576px) {
+  body header .sliderNav__works .sliderPrice, body header .sliderNav__works .sliderStreet {
+    font-size: 0.9em;
+    margin-top: 0;
+    margin-bottom: 8px;
+  }
+}
+body main .expertise {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 80px 20px 80px 20px;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise {
+    display: block;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise {
+    display: block;
+  }
+}
+body main .expertise__index-bg {
+  grid-column: 1/3;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: auto;
+  margin-top: 35px;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__index-bg {
+    display: none;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__index-bg {
+    display: none;
+  }
+}
+body main .expertise__presentation {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  position: absolute;
+  left: 10%;
+  margin: 40px 0;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__presentation {
+    position: initial;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__presentation {
+    position: initial;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    margin: 0 15px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .expertise__presentation {
+    left: 0;
+    padding-left: 40px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .expertise__presentation {
+    left: 0;
+    padding-left: 40px;
+  }
+}
+body main .expertise__presentation .presentationDomaine {
+  display: flex;
+  flex-direction: row;
+  gap: 0px;
+  align-items: center;
+  width: 250px;
+  flex-wrap: wrap;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__presentation .presentationDomaine {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__presentation .presentationDomaine {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .expertise__presentation .presentationDomaine {
+    width: 225px;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .expertise__presentation .presentationDomaine {
+    width: 225x;
+  }
+}
+body main .expertise__presentation .presentationDomaine .fa-regular,
+body main .expertise__presentation .presentationDomaine .fa-pen-nib {
+  font-size: 3em;
+  margin-left: 10px;
+}
+body main .expertise__presentation .presentationDomaine h2 {
+  color: rgba(0, 0, 0, 0.9);
+  letter-spacing: 0px;
+  font-size: 1.1em;
+  font-weight: 700;
+  margin-left: 15px;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__presentation .presentationDomaine h2 {
+    font-size: 1em;
+    margin-bottom: 5px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__presentation .presentationDomaine h2 {
+    font-size: 1em;
+  }
+}
+body main .expertise__presentation .presentationDomaine p {
+  font-size: 1em;
+  letter-spacing: 0px;
+  color: rgba(0, 0, 0, 0.7);
+  margin-top: 5px;
+  padding-top: 5px;
+  line-height: 1.5em;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__presentation .presentationDomaine p {
+    font-size: 0.925em;
+    margin-top: 0;
+    padding-top: 0;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__presentation .presentationDomaine p {
+    font-size: 0.9em;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .expertise__presentation .presentationDomaine p {
+    font-size: 0.93em;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .expertise__presentation .presentationDomaine p {
+    font-size: 0.93em;
+  }
+}
+body main .expertise__contactForm {
+  position: absolute;
+  width: 35%;
+  left: 50%;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__contactForm {
+    width: 100%;
+    position: initial;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__contactForm {
+    width: 100%;
+    position: initial;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .expertise__contactForm {
+    width: 50%;
+    left: 43%;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .expertise__contactForm {
+    width: 45%;
+  }
+}
+body main .expertise__contactForm h2 {
+  font-size: 2.1em;
+  margin: 0 180px 0 0;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__contactForm h2 {
+    font-size: 1.6em;
+    text-align: center;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__contactForm h2 {
+    font-size: 1.6em;
+    text-align: center;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  body main .expertise__contactForm h2 {
+    font-size: 1.8em;
+    margin: 0 40px 0 0;
+  }
+}
+@media screen and (min-width: 992px) and (max-width: 1024px) {
+  body main .expertise__contactForm h2 {
+    font-size: 1.9em;
+    margin: 0 40px 0 0;
+  }
+}
+body main .expertise__contactForm h3 {
+  font-size: 1.04em;
+  color: #C4956A;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__contactForm h3 {
+    margin-top: 15px;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__contactForm h3 {
+    margin-top: 15px;
+    text-align: center;
+  }
+}
+body main .expertise__contactForm form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 40px;
+  background-color: #292929;
+  border-radius: 8px;
+  margin-top: 45px;
+  box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.7);
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__contactForm form {
+    padding: 20px;
+  }
+}
+body main .expertise__contactForm form input {
+  padding: 12px 0;
+  background-color: #292929;
+  color: #FFFFFF;
+  font-size: 1.05em;
+  border: none;
+  border-bottom: 0.1px solid rgba(255, 255, 255, 0.1);
+}
+body main .expertise__contactForm form input::-moz-placeholder {
+  color: #FFFFFF;
+}
+body main .expertise__contactForm form input::placeholder {
+  color: #FFFFFF;
+}
+body main .expertise__contactForm form input:focus {
+  outline-width: 0;
+}
+body main .expertise__contactForm form input:focus::-moz-placeholder {
+  color: transparent;
+}
+body main .expertise__contactForm form input:focus::placeholder {
+  color: transparent;
+}
+body main .expertise__contactForm form button {
+  font-size: 0.8em;
+  font-weight: 700;
+  color: #FFFFFF;
+  width: 140px;
+  height: 50px;
+  background-color: #C4956A;
+  border: none;
+  margin-top: 20px;
+}
+@media screen and (max-width: 576px) {
+  body main .expertise__contactForm form button {
+    width: 115px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 576px) and (max-width: 768px) {
+  body main .expertise__contactForm form button {
+    width: 120px;
+    height: 40px;
+  }
 }/*# sourceMappingURL=style.css.map */
