--- a/style/style.scss
+++ b/style/style.scss
@@ -322,6 +322,12 @@ body {
                     display: flex;
                     gap: 35px;
                     justify-content: space-between;
+                    @media screen and (max-width: 576px) {
+                        gap: 10px;
+                        justify-content: space-around;
+                        flex-wrap: wrap;
+                        padding-top: 15px;
+                    }
                 }
             }
             &__works .sliderAdress {
@@ -329,6 +335,11 @@ body {
                 font-size: 1em;
                 font-weight: 800;
                 display: none;
+                @media screen and (max-width: 576px) {
+                    font-size: .9em;
+                    margin-top: 0;
+                    margin-bottom: 8px;
+                }
             }
             &__works .sliderPrice,
             &__works .sliderStreet {
@@ -336,6 +347,241 @@ body {
                 font-size: 1em;
                 font-weight: 800;
                 display: none;
+                @media screen and (max-width: 576px) {
+                    font-size: .9em;
+                    margin-top: 0;
+                    margin-bottom: 8px;
+                }
+            }
+        }
+    }
+
+    main {
+        .expertise {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            margin: 80px 20px 80px 20px;
+            @media screen and (max-width: 576px) {
+                display: block;
+            }
+            @media screen and (min-width: 576px) and (max-width: 768px) {
+                display: block;
+            }
+            &__index-bg {
+                grid-column: 1 / 3;
+                width: fit-content;
+                height: fit-content;
+                margin: auto;
+                margin-top: 35px;
+                @media screen and (max-width: 576px) {
+                    display: none;
+                }
+                @media screen and (min-width: 576px) and (max-width: 768px) {
+                    display: none;
+                }
+            }
+
+            &__presentation {
+                display: flex;
+                flex-direction: column;
+                gap: 25px;
+                position: absolute;
+                left: 10%;
+                margin: 40px 0;
+                @media screen and (max-width: 576px) {
+                    position: initial;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 20px;
+                }
+                @media screen and (min-width: 576px) and (max-width: 768px) {
+                    position: initial;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    gap: 20px;
+                    margin: 0 15px;
+                }
+                @media screen and (min-width: 768px) and (max-width: 992px) {
+                    left: 0;
+                    padding-left: 40px;
+                }
+                @media screen and (min-width: 992px) and (max-width: 1024px) {
+                    left: 0;
+                    padding-left: 40px;
+                }
+                .presentationDomaine {
+                    display: flex;
+                    flex-direction: row;
+                    gap: 0px;
+                    align-items: center;
+                    width: 250px;
+                    flex-wrap: wrap;
+                    @media screen and (max-width: 576px) {
+                        width: auto;
+                        display: flex;
+                        flex-direction: column;
+                    }
+                    @media screen and (min-width: 576px) and (max-width: 768px) {
+                        width: auto;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                    }
+                    @media screen and (min-width: 768px) and (max-width: 992px) {
+                        width: 225px;
+                    }
+                    @media screen and (min-width: 992px) and (max-width: 1024px) {
+                        width: 225x;
+                    }
+                }
+                .presentationDomaine .fa-regular,
+                .presentationDomaine .fa-pen-nib {
+                    font-size: 3em;
+                    margin-left: 10px;
+                }
+                .presentationDomaine h2 {
+                    color: rgba($color: #000000, $alpha: .9);
+                    letter-spacing: 0px;
+                    font-size: 1.1em;
+                    font-weight: 700;
+                    margin-left: 15px;
+                    @media screen and (max-width: 576px) {
+                        font-size: 1em;
+                        margin-bottom: 5px;
+                    }
+                    @media screen and (min-width: 576px) and (max-width: 768px) {
+                        font-size: 1em;
+                    }
+                }
+                .presentationDomaine p {
+                    font-size: 1em;
+                    letter-spacing: 0px;
+                    color: rgba($color: #000000, $alpha: .7);
+                    margin-top: 5px;
+                    padding-top: 5px;
+                    line-height: 1.5em;
+                    @media screen and (max-width: 576px) {
+                        font-size: .925em;
+                        margin-top: 0;
+                        padding-top: 0;
+                        text-align: center;
+                    }
+                    @media screen and (min-width: 576px) and (max-width: 768px) {
+                        font-size: .9em;
+                        text-align: center;
+                    }
+                    @media screen and (min-width: 768px) and (max-width: 992px) {
+                        font-size: .93em;
+                    }
+                    @media screen and (min-width: 992px) and (max-width: 1024px) {
+                        font-size: .93em;
+                    }
+                }
+            }
+
+            &__contactForm {
+                position: absolute;
+                width: 35%;
+                left: 50%;
+                @media screen and (max-width: 576px) {
+                    width: 100%;
+                    position: initial;
+                }
+                @media screen and (min-width: 576px) and (max-width: 768px) {
+                    width: 100%;
+                    position: initial;
+                }
+                @media screen and (min-width: 768px) and (max-width: 992px) {
+                    width: 50%;
+                    left: 43%;
+                }
+                @media screen and (min-width: 992px) and (max-width: 1024px) {
+                    width: 45%;
+                }
+                h2 {
+                    font-size: 2.1em;
+                    margin: 0 180px 0 0;
+                    @media screen and (max-width: 576px) {
+                        font-size: 1.6em;
+                        text-align: center;
+                        margin: auto;
+                    }
+                    @media screen and (min-width: 576px) and (max-width: 768px) {
+                        font-size: 1.6em;
+                        text-align: center;
+                        margin: auto;
+                    }
+                    @media screen and (min-width: 768px) and (max-width: 992px) {
+                        font-size: 1.8em;
+                        margin: 0 40px 0 0;
+                    }
+                    @media screen and (min-width: 992px) and (max-width: 1024px) {
+                        font-size: 1.9em;
+                        margin: 0 40px 0 0;
+                    }
+                }
+                h3 {
+                    font-size: 1.04em;
+                    color: #C4956A;
+                    @media screen and (max-width: 576px) {
+                        margin-top: 15px;
+                        text-align: center;
+                    }
+                    @media screen and (min-width: 576px) and (max-width: 768px) {
+                        margin-top: 15px;
+                        text-align: center;
+                    }
+                }
+                form {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+                    padding: 40px;
+                    background-color: #292929;
+                    border-radius: 8px;
+                    margin-top: 45px;
+                    box-shadow: 2px 2px 20px rgba($color: #000000, $alpha: .7);
+                    @media screen and (max-width: 576px) {
+                        padding: 20px;
+                    }
+                    input {
+                        padding: 12px 0;
+                        background-color: #292929;
+                        color: #FFFFFF;
+                        font-size: 1.05em;
+                        border: none;
+                        border-bottom: .1px solid rgba($color: #FFFFFF, $alpha: .1);
+                    }
+                    input::placeholder {
+                        color: #FFFFFF;
+                    }
+                    input:focus {
+                        outline-width: 0;
+                    }
+                    input:focus::placeholder {
+                        color: transparent;
+                    }
+                    button {
+                        font-size: .8em;
+                        font-weight: 700;
+                        color: #FFFFFF;
+                        width: 140px;
+                        height: 50px;
+                        background-color: #C4956A;
+                        border: none;
+                        margin-top: 20px;
+                        @media screen and (max-width: 576px) {
+                            width: 115px;
+                            height: 40px;
+                        }
+                        @media screen and (min-width: 576px) and (max-width: 768px) {
+                            width: 120px;
+                            height: 40px;
+                        }
+                    }
+                }
             }
         }
     }
