--- a/style/style.scss
+++ b/style/style.scss
@@ -584,5 +584,146 @@ body {
                 }
             }
         }
+
+        .workMethod {
+            display: flex;
+            flex-direction: row;
+            color: rgba($color: #FFFFFF, $alpha: .5);
+            background-color: #282828;
+            padding: 80px 150px 80px 150px;
+            @media screen and (max-width: 576px) {
+                flex-direction: column;
+                gap: 10px;
+                padding: 80px 30px 80px 30px;
+            }
+            @media screen and (min-width: 576px) and (max-width: 768px) {
+                flex-direction: column;
+                gap: 10px;
+                padding: 80px 30px 80px 30px;
+            }
+            @media screen and (min-width: 768px) and (max-width: 992px) {
+                flex-direction: column;
+                gap: 10px;
+                padding: 80px 30px 80px 30px;
+            }
+            @media screen and (min-width: 992px) and (max-width: 1024px) {
+                padding: 80px 30px 80px 30px;
+            }
+
+            &__details {
+                width: 50%;
+                margin-right: 200px;
+                @media screen and (max-width: 576px) {
+                    width: 100%;
+                    margin-right: 0;
+                }
+                @media screen and (min-width: 576px) and (max-width: 768px) {
+                    width: 100%;
+                    margin-right: 0;
+                }
+                @media screen and (min-width: 768px) and (max-width: 992px) {
+                    width: 100%;
+                    margin-right: 0;
+                }
+                @media screen and (min-width: 992px) and (max-width: 1024px) {
+                    width: 40%;
+                    margin-right: 30px;
+                }
+                h4 {
+                    color: #C4956A;
+                    margin: 0;
+                }
+                h2 {
+                    font-size: 4.3em;
+                    color: #FFFFFF;
+                    font-weight: 700;
+                    letter-spacing: 0px;
+                    margin: 10px 80px 0 0;
+                    line-height: 1.1em;
+                    @media screen and (max-width: 576px) {
+                        font-size: 2.6em;
+                    }
+                    @media screen and (min-width: 576px) and (max-width: 768px) {
+                        font-size: 2.6em;
+                    }
+                    @media screen and (min-width: 768px) and (max-width: 992px) {
+                        font-size: 3em;
+                    }
+                    @media screen and (min-width: 992px) and (max-width: 1024px) {
+                        font-size: 3.6em;
+                    }
+                }
+                h3 {
+                    font-size: 1.8em;
+                    color: #C39469;
+                    margin-top: 30px;
+                }
+                p {
+                    font-size: 1.015em;
+                    line-height: 1.5em;
+                }
+            }
+            &__list {
+                display: flex;
+                flex-direction: column;
+                gap: 40px;
+                width: 50%;
+                @media screen and (max-width: 576px) {
+                    width: 100%;
+                    gap: 20px;
+                }
+                @media screen and (min-width: 576px) and (max-width: 768px) {
+                    width: 100%;
+                    gap: 20px;
+                }
+                @media screen and (min-width: 768px) and (max-width: 992px) {
+                    width: 100%;
+                }
+                @media screen and (min-width: 992px) and (max-width: 1024px) {
+                    width: 60%;
+                }
+                ol {
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                    gap: 20px;
+                    padding: 0;
+                    @media screen and (max-width: 576px) {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 15px;
+                    }
+                    @media screen and (min-width: 576px) and (max-width: 768px) {
+                        gap: 30px;
+                    }
+                    @media screen and (min-width: 768px) and (max-width: 992px) {
+                        gap: 30px;
+                    }
+                }
+                ol li {
+                    font-size: .96em;
+                    font-weight: 800;
+                    list-style-type: decimal-leading-zero;
+                    list-style-position: inside;
+                    list-style-image: none;
+                    color: #FFFFFF;
+                    opacity: .4;
+                    cursor: pointer;
+                }
+                ol li:hover {
+                    opacity: 1;
+                }
+                /*
+                ol #methodWorkList1 {
+                    opacity: 1;
+                }
+                */
+                ol li span {
+                    margin-left: 8px;
+                }
+            }
+            &__list img {
+                border-radius: 5px;
+            }
+        }
     }
 }
